syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.giuliapais.robotsnetwork.comm";

service CrashRecovery {
  rpc NotifyCrashEvent(CrashEvent) returns (NoResponse) {}
}

message CrashEvent {
  int32 robotId = 1;
  int32 crashedRobotId = 2;
  int64 timestamp = 3;
}

message NoResponse {}